yml-folder/docs/v3/smp.mdx
---
title: Self Match Prevention
sidebar_label: Self Match Prevention
---

## What is SMP?
Providing SelfMatchPrevention ability, users can choose the execution method when placing an order. When the counterparty
is the same UID or belongs to the same specified SMP group, the execution can be effected accordingly as the following:
1. Cancel maker: Cancel the maker order when executed, and the taker order remained.
2. Cancel taker: Cancel the taker order when executed, and the maker order remained.
3. Cancel both: Cancel both taker and maker orders when executed.

## What is SMP Trade Group?
* SMP is available for any user by UID level.
* SMP Trade Group Management is only available for institutions now.

**SMP Trade Group**: refers to a group of UIDs. When any of the UIDs in this group places an order and the SMP execution
policy is selected, it will be triggered when the maker order under any of the UIDs in this group is matched.

**More details**:
1. Each UID can only join one SMP Trade Group.

2. SMP Trade Group is a UID-level management group, so when a main-account joins a SMP Trade Group, all the sub-accounts
under this main-account will be automatically joined into the Trade Group as well.

<ul>
    <li>
        If the main-account has already joined a SMP Trade Group, then a sub-account is created after it, this new
        sub-account will be automatically joined into the same SMP Trade Group by default.
    </li>
    <li>
        Sub-account does not have to be tied to the same SMP Trading Group as the main-account. It is only a default
        mechanism for auto-joining the same one. It can be reset into different groups manually if really needed.
    </li>
</ul>

3. The correspondence between SMP Trade Group and UIDs can be changed, such as a UID joining a new SMP Trade Group or
removed from a SMP Trade Group, which will not affect the pre-existing orders, but only the newly placed orders after
the relationship has changed.

**Notes**:
Based on this, we strongly suggest that when there will be a SMP Trade Group change happens, it is better to cancel all
the pre-existing orders to avoid the unexpected execution.

4. SMP Trade Group has a higher priority on SMP execution, and UID will only take effect when there is no group on any side.

**Examples**:<br/>
1st of Jan: UID1 joined SMP Trade Group A, and placed Order1;<br/>
2nd of Jan: UID1 was removed from SMP Trade Group A, but Order1 is still active and "New"
  - case1: If UID1 joined SMP Trade Group B, and placed Order2, if Order2 meets Order1, it will be executed since they belong to two different groups.
  - case2: If UID1 did not join any other groups after being removed from SMP Trade Group A, and placed Order2, if Order2 meets Order1, the SMP will be triggered because UID1 did not have a group when placed Order2, so SMP was triggered at the UID level (the same UID1).

## How to manage my UIDs & SMP Trade Group?
You can contact your institutional business manager or email Bybit via: institutional_services@bybit.com

## Supported OpenAPI Versions and Product Lines
|Product lines |OpenAPI version supported |Comments|
|:----|:--------|:------|
|Spot|V3 (normal account)<br/>V5 (unified & normal account)| |
|Contract|Contract V3 (normal account): USDT perpetual / Inverse perpetual & futures<br/>V5 (unified account): USDT perpetual / Inverse perpetual & futures / USDC perpetual & futures<br/>V5 (normal account): USDT perpetual / Inverse perpetual & futures|  |
|Option|V5 (unified account)|V1 has a default SMP at UID level |